Don't set initial presence message to the string "online"

BUG: 298475
Reviewed-by: Martin Klapetek